# pysto-legacy

./: README.md  intgrl.py  pyproject.toml  setup.cfg
doc/: doc.aux  doc.tex
src/pysto/: .gitignore  coefficients.py  integrals.py
