[metadata]
name = pysto-project-lmazouin
version = 1.0.0
author = Laurent Mazouin
author_email = laurent.mazouin@gmail.com
description = Python library for molecular integrals over Slater-type orbitals
long-description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/LMazouin/pysto
classifier = 
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = src
